Separated commands into modules with helpers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,12 @@ cmake_minimum_required(VERSION 2.8)
 
 project(ALF)
 
+include_directories( "${WIND_BASE}/target/h/WPILib" )
+
 set(SRC
     Main.cpp
+    Commands.cpp
+    Helpers.cpp
 )
 
 add_executable(ALF.out ${SRC})
