Updated CMakeLists.txt for lastest C++11 toolchain ; fixed deprecated string-to-char* conversions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,21 @@
 cmake_minimum_required(VERSION 2.8)
+include(FRCDeploy)
 
 project(ALF)
+find_package(WPILib)
+include_directories(${WPILib_INCLUDE_DIRS})
 
-include_directories( "${WIND_BASE}/target/h/WPILib" )
+set(DIRS)
 
-set(SRC
-    Main.cpp
-    Commands.cpp
-)
+file(GLOB SRC *.cpp *.c)
+
+foreach(ELEM ${DIRS})
+    file(GLOB_RECURSE FILES ${ELEM}.cpp ${ELEM}.c)
+    list(APPEND SRC ${FILES})
+endforeach(ELEM)
 
 add_executable(ALF.out ${SRC})
+
+target_link_libraries(ALF.out ${WPILib_LIBRARY})
+
+add_make_deploy(ALF.out 10.35.12.2)
