Rewrote reloadRobot() function ; made Commands module compile as C ; added compiler flags to CMakeLists.txt ; removed WPILib linkage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 2.8)
-include(FRCDeploy)
 
 project(ALF)
-find_package(WPILib)
-include_directories(${WPILib_INCLUDE_DIRS})
+
+set(CMAKE_CXX_FLAGS "-O3 -Wall -s -std=c++11")
+set(CMAKE_C_FLAGS "-O3 -Wall -s -std=c11")
 
 set(DIRS)
 
@@ -15,7 +15,3 @@ foreach(ELEM ${DIRS})
 endforeach(ELEM)
 
 add_executable(ALF.out ${SRC})
-
-target_link_libraries(ALF.out ${WPILib_LIBRARY})
-
-add_make_deploy(ALF.out 10.35.12.2)
